# semver-explain

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: release.yaml
src/: main.rs
