[package]
name = "semver-explain"
description = "CLI tool to understand SemVer requirements by converting them to less-than, greater-than and/or equal-to form."
repository = "https://github.com/alilleybrinker/semver-explain"
license = "MIT"
version = "0.2.3"
rust-version = "1.53"
edition = "2018"
keywords = ["semver", "cli"]
categories = ["command-line-utilities"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
semver = "1.0"
structopt = "0.3"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.8.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Where to host releases
hosting = ["axodotdev", "github"]

